[gd_scene load_steps=4 format=3 uid="uid://bc8flfd8jo477"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_dluws"]
[ext_resource type="Texture2D" uid="uid://0347vqwlkwlu" path="res://assets/ui/gladiator_textlogo.png" id="1_k016w"]
[ext_resource type="PackedScene" uid="uid://upv3icjb6mhu" path="res://scenes/ui/button.tscn" id="1_tests"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dluws")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 420.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)

[node name="Base" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -30.0
offset_right = 74.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="VBoxContainer" parent="Base"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Logo" type="TextureRect" parent="Base/Logo"]
layout_mode = 2
texture = ExtResource("1_k016w")

[node name="MenuButtons" type="VBoxContainer" parent="Base/Logo"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Start" parent="Base/Logo/MenuButtons" instance=ExtResource("1_tests")]
layout_mode = 2
text = "START"

[node name="Credits" parent="Base/Logo/MenuButtons" instance=ExtResource("1_tests")]
visible = false
layout_mode = 2
text = "CREDITS"
menu_on_press = 1

[node name="Quit" parent="Base/Logo/MenuButtons" instance=ExtResource("1_tests")]
layout_mode = 2
text = "QUIT"
menu_on_press = 2

[node name="VersionLabel" type="Label" parent="."]
custom_minimum_size = Vector2(1, 1)
layout_mode = 0
offset_left = 368.0
offset_top = 352.0
offset_right = 420.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 8
text = "1.0"
horizontal_alignment = 2

[connection signal="pressed" from="Base/Logo/MenuButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Base/Logo/MenuButtons/Quit" to="." method="_on_quit_pressed"]
